--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,4 +1,5 @@
 _repo: The-Complete-Works-of-Artemus-Ward-Part-7-Miscellaneous_3277
+_version: 0.1.0
 creator:
   author:
     agent_name: Ward, Artemus
