--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: The-Complete-Works-of-Artemus-Ward-Part-7-Miscellaneous_3277
-_version: 0.1.0
+_version: 0.2.0
+covers:
+- cover_type: generated
+  image_path: cover.png
 creator:
   author:
     agent_name: Ward, Artemus
@@ -10,6 +13,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/1149
     wikipedia: http://en.wikipedia.org/wiki/Charles_Farrar_Browne
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/3277#The-Complete-Works-of-Artemus-Ward-Part-7-Miscellaneous
 gutenberg_issued: '2002-06-01'
 gutenberg_type: Text
 identifiers:
