--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,5 @@
 _repo: The-Complete-Works-of-Artemus-Ward-Part-7-Miscellaneous_3277
-_version: 0.2.0
+_version: 0.2.1
 covers:
 - cover_type: generated
   image_path: cover.png
@@ -26,5 +26,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'American wit and humor'
 - !lcc 'PS'
+- GITenberg
 title: 'The Complete Works of Artemus Ward — Part 7: Miscellaneous'
 url: http://www.gutenberg.org/ebooks/3277
